# get-a-chord-backend

./: README.md  db.sqlite3  package-lock.json  pyproject.toml  transformImage.py
chords/: admin.py  models.py  serializers.py  urls.py  views.py
chords/migrations/: 0001_initial.py  0002_remove_chord_chordname_and_more.py
config/: settings.py  urls.py
excalidraws/: get-a-chord-frontend.excalidraw
songs/: admin.py  models.py
songs/migrations/: 0001_initial.py  0002_initial.py  0002_rename_songs_song.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py
youtube_search/: urls.py  views.py
youtube_search/templates/youtube_search/: index.html  play.html  search_results.html
