[tool.poetry]
name = "get-a-chord-backend"
version = "0.1.0"
description = ""
authors = ["siggu <106001755+siggu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
